# simulator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/sim-astro/: Cargo.toml
crates/sim-core/: Cargo.toml
crates/sim-coupling/: Cargo.toml
crates/sim-coupling/src/: boussinesq_buoyancy.rs  brownian_force.rs  convection_link.rs  dissipation_to_heat.rs  domain_states.rs  grid_fluid_rigid.rs  image_charge_force.rs  induction_coupling.rs  joule_heat.rs  lib.rs  lorentz_force.rs  motor_coupling.rs  piston_gas.rs  sph_rigid.rs
crates/sim-em/: Cargo.toml
crates/sim-fluid/: Cargo.toml
crates/sim-fluid/benches/: grid_fluid_pcg.rs  sph_neighbor_search.rs
crates/sim-fluid/src/: aero.rs  buoyancy.rs  grid_fluid.rs  grid_fluid_rigid.rs  karman.rs  lib.rs  poiseuille.rs  sph.rs
crates/sim-math/: Cargo.toml
crates/sim-mechanics/: Cargo.toml
crates/sim-mechanics/benches/: contact_solver.rs
crates/sim-mechanics/src/: body.rs  ccd.rs  collision.rs  contact.rs  gjk.rs  joint.rs  lib.rs  shape.rs  sleep.rs  soft_body.rs  solver.rs  vehicle.rs
crates/sim-mechanics/tests/: conservation.rs  p1_analytic.rs  p2_analytic.rs  p3_analytic.rs
crates/sim-quantum/: Cargo.toml
crates/sim-render/: Cargo.toml
crates/sim-statistical/: Cargo.toml
crates/sim-thermal/: Cargo.toml
crates/sim-wasm/: Cargo.toml
crates/sim-wasm/src/: lib.rs
crates/sim-world/: Cargo.toml
crates/sim-world/src/: demos.rs  integration_scenarios.rs  lib.rs  orchestrator.rs  overlap.rs  raycast.rs  scenario.rs
demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/src/: main.ts
docs/: README.md
docs/00-foundation/: 01-vision.md  02-scale-ladder.md  03-units-conventions.md  04-architecture.md  05-rust-wasm-platform.md  06-performance-strategy.md
docs/01-math/: 01-linear-algebra.md  02-fields.md  03-integrators.md  04-random.md
docs/10-mechanics/: 01-rigid-body.md  02-collision-detection.md  03-contact-solver.md  04-friction.md  05-joints-constraints.md  06-soft-body-particles.md
docs/11-fluid/: 01-continuum-basics.md  02-eulerian-grid.md  03-sph.md  04-free-surface-buoyancy.md  05-aero-hydrodynamics.md
docs/12-thermal/: 01-thermodynamics-laws.md  02-heat-transfer.md  03-phase-change.md  04-material-thermal-props.md
docs/13-electromagnetism/: 01-electrostatics-magnetostatics.md  02-circuits.md  03-maxwell-fdtd.md  04-light-optics.md  05-em-mechanics-coupling.md
docs/14-quantum/: 01-role-and-limits.md  02-schrodinger-solver.md  03-effective-models.md
docs/15-statistical/: 01-micro-macro-bridge.md  02-kinetic-gas.md  03-diffusion-brownian.md  04-monte-carlo.md
docs/16-astro/: 01-gravitation-nbody.md  (+2 more)
(+60 files in other folders)
