[package]
name = "sim-coupling"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
sim-core = { path = "../sim-core" }
sim-math = { path = "../sim-math" }
sim-mechanics = { path = "../sim-mechanics" }
sim-thermal = { path = "../sim-thermal" }
sim-em = { path = "../sim-em" }
sim-fluid = { path = "../sim-fluid" }
