[package]
name = "sim-fluid"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
sim-core = { path = "../sim-core" }
sim-math = { path = "../sim-math" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "grid_fluid_pcg"
harness = false

[[bench]]
name = "sph_neighbor_search"
harness = false
