[package]
name = "sim-mechanics"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
sim-math = { path = "../sim-math" }
sim-core = { path = "../sim-core" }
sim-fluid = { path = "../sim-fluid" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "contact_solver"
harness = false
