[package]
name = "sim-world"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
sim-math = { path = "../sim-math" }
sim-core = { path = "../sim-core" }
sim-mechanics = { path = "../sim-mechanics" }
sim-thermal = { path = "../sim-thermal" }
sim-em = { path = "../sim-em" }
sim-astro = { path = "../sim-astro" }
sim-fluid = { path = "../sim-fluid" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
